# project-2-rag-with-guardrails

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_document_chunks.py
docs/: evaluation-dashboard-spec.md  ui-design-specification.md  ui-preview.html
docs/architecture/: frontend-ux-architecture.md  how-it-works.md
docs/plan/: 2026-03-31-rag-with-guardrails-v2.md
docs/scope/: 02-rag-with-guardrails.md  03-critical-review.md  04-adversarial-attack-matrix.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  documents.ts  evaluations.ts  query.ts
frontend/src/components/Chat/: BlockedMessage.tsx  ChatInput.tsx  ChatView.tsx  CitationPanel.tsx  ConfidenceBadge.tsx  MessageBubble.tsx  MessageList.tsx  SourceCard.tsx  TypingIndicator.tsx
frontend/src/components/Documents/: DocumentsView.tsx  DropZone.tsx  FileItem.tsx  FileList.tsx
frontend/src/components/Evaluation/: EvaluationView.tsx  MetricCard.tsx  ProgressBar.tsx  QuestionTable.tsx  RunControls.tsx
frontend/src/components/shared/: Header.tsx  LoadingSkeleton.tsx
frontend/src/hooks/: useChat.ts  useDocuments.ts  useEvaluationRun.ts
frontend/src/styles/: animations.css  components.css  design-tokens.css  index.css  reset.css
frontend/src/types/: api.ts  ui.ts
src/rag_guardrails/api/: app.py  dependencies.py
src/rag_guardrails/api/routes/: documents.py  evaluations.py  health.py  query.py
src/rag_guardrails/core/: config.py  database.py  logging.py
src/rag_guardrails/evaluation/: ragas_runner.py
src/rag_guardrails/guardrails/: input_guards.py  output_guards.py
src/rag_guardrails/ingestion/: pipeline.py
src/rag_guardrails/models/: audit_log.py  document.py  document_chunk.py  evaluation_run.py  session_history.py
src/rag_guardrails/retrieval/: embeddings.py  llm_client.py  pipeline.py  query_router.py  reranker.py  structured_handler.py
tests/: conftest.py
tests/e2e/: conftest.py  test_adversarial.py  test_full_pipeline.py
tests/fixtures/: ragas_testset.json
tests/fixtures/documents/: sample_policy.txt
tests/integration/: conftest.py  test_documents.py  test_guardrails.py  test_health.py
tests/unit/: conftest.py
tests/unit/api/: test_upload_validation.py
tests/unit/guardrails/: test_injection.py  test_output_grounding.py  test_pii_detector.py  test_topic_classifier.py
